--- a/ubuntu-18-04-python-3-6/Dockerfile.template
+++ b/ubuntu-18-04-python-3-6/Dockerfile.template
@@ -10,10 +10,11 @@ RUN \
 RUN \
   apt-get install --no-install-recommends -y \  
   python3 \
-  python3-pip \
   python3-setuptools \
   lbzip2 \
   curl
+
+RUN python3 /usr/lib/python3/dist-packages/easy_install.py pip
 
 RUN \
   apt-get install --no-install-recommends -y \
